Setting gfx.webrender.dl.dump-content doesn't dump the WR display items any more
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox80 | --- | fixed |
People
(Reporter: kats, Assigned: kats)
References
Details
Attachments
(1 file)
Setting this pref is supposed to dump the gecko display list with the WR items interleaved. However the WR items don't show up. It seems like the loop here never does any iteration and so the function always returns 0 and we never advance the counter on the C++ side.
I'm guessing this regressed in bug 1558926 which last touched this code.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
•
|
||
Hm, given the way the display list cache stuff works I don't think it's possible to easily make the interleaved dumping work any more. Might have to disable the cache when the dumping is enabled.
Comment 2•5 years ago
|
||
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #0)
I'm guessing this regressed in bug 1558926 which last touched this code.
This was somewhat broken even before that, see bug 1572421.
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #1)
Hm, given the way the display list cache stuff works I don't think it's possible to easily make the interleaved dumping work any more. Might have to disable the cache when the dumping is enabled.
I think this makes sense, since people wanting interleaved dumps probably also want to see the "real" items that would be created, rather than just ReuseItem, if the Gecko display item was reused.
| Assignee | ||
Comment 3•5 years ago
|
||
(In reply to Miko Mynttinen [:miko] from comment #2)
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #0)
I'm guessing this regressed in bug 1558926 which last touched this code.
This was somewhat broken even before that, see bug 1572421.
Indeed. I fixed the recent dumping breakage but now I see that problem again. I'll put up the patch for this bug, and reopen that one to try and track down that problem.
| Assignee | ||
Comment 4•5 years ago
|
||
The extra_data_offset wasn't being set properly in the built display list's
descriptor, so no items were being found. With that fixed it became evident
that we need to disable the display list item cache for dumping to work, since
we can't easily look up reuse items when doing the interleaved dumping. So
this patch also adds some machinery for that.
Comment 6•5 years ago
|
||
| bugherder | ||
Description
•