Bug 1652986 - Restore ability to dump the WR display list interleaved with the the gecko DL. r=miko

The extra_data_offset wasn't being set properly in the built display list's
descriptor, so no items were being found. With that fixed it became evident
that we need to disable the display list item cache for dumping to work, since
we can't easily look up reuse items when doing the interleaved dumping. So
this patch also adds some machinery for that.

Differential Revision: https://phabricator.services.mozilla.com/D83778